--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ html,body{
     justify-content: center;
 }
 #panel{
-    height: 70%;
-    width: 40%;
+    height: 71%;
+    width: 20%;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
@@ -33,10 +33,32 @@ html,body{
     background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 button{
-    padding: 30px 60px;
+    width: 50px;
+    height: 50px;
+    padding: 30px;
     border-radius: 10px;
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    margin-right: 10px;
+    background-color: white;
+    box-shadow: 0px 5px 5px;
+    cursor: pointer;
+}
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8px;
+    margin-left: 9px;
+}
+#zero{
+    padding: 30px 100px;
+    margin-right: 10px;
 }
