--- a/style.css
+++ b/style.css
@@ -19,18 +19,28 @@ html,body{
     height: 71%;
     width: 20%;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 20px;
     overflow: hidden;
+    border: 1px solid white;
+    box-shadow: 0px 0px 100px 0px;
+    background-color: transparent;
 }
 #ptop{
+    display: flex;
+    align-items: center;
+    justify-content: right;
     width: 100%;
     background-color: red;
     height: 170px;
+    font-size: 50px;
+    font-weight: 600;
+}
+#screen{
+
 }
 #pbtm{
     width: 100%;
     height: calc(100% - 170px);
-    background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
     justify-content: center;
